Minor changes:  - Created Main Tests class: BankCardManagementSystemApplicationTests  - Created application-test.yml - profile for tests  - Created db.changelog-master.yaml (empty now)  - Created Dockerfile:  - Updated docker-compose.yml file:     - db service(bankcard_db) is set up     - application service(bankcard_app) is set up  - Updated application.yml:     - application port is 8080     - liquibase changelog file is set up, but liquibase is disabled for now     - datasource is set up(username, password, url, ect.)  - Created banner.txt

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,24 @@
-#
-# application.yml — главный конфигурационный файл Spring Boot.
+spring:
+  application:
+    name: bankcard
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME:postgres}
+    password: ${SPRING_DATASOURCE_PASSWORD:postgres}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  liquibase:
+    enabled: false
+    change-log: classpath:db/migration/db.changelog-master.yaml
+server:
+  port: 8080
 
-Что нужно сделать:
-  - Указать настройки подключения к базе данных.
-  - Указать порт приложения.
-  - Настроить параметры безопасности и JWT.
-  - Включить Swagger UI.
+#  - Настроить параметры безопасности и JWT.
+#  - Включить Swagger UI.
