--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,30 @@
-# 
-# docker-compose.yml — определяет сервисы для разработки и тестирования.
+services:
+  bankcard_db:
+    image: postgres
+    container_name: bankcard_db
+    environment:
+      POSTGRES_DB: bankcard
+      POSTGRES_USER: bankuser
+      POSTGRES_PASSWORD: bankpass
+    ports:
+      - "5433:5432"
+    volumes:
+      - bankcard_db_data:/var/lib/postgresql
 
-Что нужно сделать:
-  - Настроить сервисы для:
-      - PostgreSQL (или MySQL) с начальной базой.
-      - Приложения Spring Boot (если нужно).
-  - Открыть нужные порты (например, 5432, 8080).
-  - Настроить volume для хранения данных БД.
+  bankcard_app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: bankcard_app
+    depends_on:
+      - bankcard_db
+    ports:
+      - "8081:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://bankcard_db:5432/bankcard
+      SPRING_DATASOURCE_USERNAME: bankuser
+      SPRING_DATASOURCE_PASSWORD: bankpass
+
+
+volumes:
+  bankcard_db_data:
